# finance-dashboard

./: .dockerignore  .gitignore  BUGFIXES.md  CLAUDE.md  DESIGN.md  IMPLEMENTATION.md  README.md  SPEC.md  docker-compose.yml  e2e-test-findings.md  ideas.md
backend/: .env.example  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 06fbae7d8e34_add_networth_snapshots.py  1cb0c99972e7_add_asset_investment_transaction_asset_.py  24ac8c1c9554_add_source_to_networth_snapshots.py  3c917b71a1cf_add_networth_accounts.py  4ecc3e4c64e0_create_user_and_account_tables.py  616515b9c912_add_subscriptions.py  a1b2c3d4e5f6_add_currency_to_asset_prices.py  b2c3d4e5f6a7_add_currency_to_accounts.py  d7baca819772_add_exchange_rate.py  e7273aa2edbd_add_budget_models.py  ebf846aa0baf_add_source_field_to_statement_import.py
backend/app/: config.py  main.py
backend/app/api/: accounts.py  auth.py  budget.py  budget_charts.py  cashflow.py  categories.py  deps.py  exchange_rates.py  import_.py  income.py  networth.py  portfolio.py  subscriptions.py  transactions.py  users.py
backend/app/models/: account.py  asset.py  asset_price.py  auto_cat_rule.py  bank_profile.py  budget_transaction.py  category.py  exchange_rate.py  income_source.py  investment_transaction.py  networth_account.py  networth_snapshot.py  statement_import.py  subscription.py  user.py
backend/app/parsers/: csv_parser.py  mt940_parser.py  ofx_parser.py  pdf_parser.py  registry.py
backend/app/schemas/: account.py  (+7 more)
backend/data/: source_mappings.json
backend/tests/: conftest.py
(+371 files in other folders)
